--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -87,10 +87,16 @@ Landing Page
   background-position: right;
 }
 
-.landing-page-navbar-wrapper {
+.landing-page-navbar-container {
+  position: relative;
   width: 90%;
-  max-width: 700px;
+  height: 100vh;
+  max-width: 1100px;
   margin: 0 auto;
+}
+
+
+.landing-page-navbar-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -208,10 +214,9 @@ Landing Page
 .landing-page-hero-text-container {
   position: absolute;
   z-index: 2;
-  left: 50%;
+  left: 0;
   top: 50%;
-  transform: translate(-50%, -50%);
-  width: 90%;
+  transform: translateY(-50%);
 }
 
 .landing-page-hero-text-wrapper {
