--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -101,7 +101,7 @@ Landing Page
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
-  padding: 1.5rem 0;
+  padding: 2rem 0;
 }
 
 .landing-page-navbar-brand-link {
@@ -241,7 +241,7 @@ Landing Page
 .landing-page-join-btn {
   padding: 0.6rem 2rem ;
   text-align: center;
-  background: orangered;
+  background: rgb(228, 87, 36);
   color: white;
   justify-self: start;
   border-radius: 5px;
@@ -313,9 +313,10 @@ Landing Page
   }
 
   .landing-page-hero-header {
-    font-size: 2.3rem;
+    font-size: 2.5rem;
   }
 }
+
 
 /* 
 ======
@@ -602,7 +603,7 @@ Topics
   align-items: start;
   gap: 5rem;
   width: 90%;
-  max-width: 1100px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 3rem 0;
 }
@@ -716,7 +717,7 @@ Topics
 /* Topics Side Bar Recent Posts */
 .topics-side-bar-recent-posts {
   display: none;
-  max-width: 300px;
+  max-width: 350px;
 }
 
 .topics-side-bar__header {
@@ -797,33 +798,6 @@ Topics
   border: none;
   cursor: pointer;
 }
-
-/* .post-like-container {
-  display: flex;
-  align-items: center;
-} */
-
-/* .post-like {
-  width: 18px;
-  aspect-ratio:1/1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgb(131, 131, 131);
-  font-size: 1rem;
-  transition: 300ms color linear;
-} */
-
-/* .post-like-container > span {
-  font-size: 0.9rem;
-  padding-top: 0.2rem;
-  width: 16px;
-  aspect-ratio:1/1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgb(143, 143, 143);
-} */
 
 .topic-side-bar__num-of-post-container {
   display: flex;
@@ -950,7 +924,7 @@ Posts
   letter-spacing: 0.07rem;
   font-weight: 500;
   width: 90%;
-  max-width:1100px;
+  max-width:1400px;
   margin: 0 auto;
   padding-top: 2rem;
 }
@@ -960,7 +934,7 @@ Posts
   letter-spacing: 0.07rem;
   font-weight: 500;
   width: 90%;
-  max-width:1100px;
+  max-width:1400px;
   margin: 0 auto;
   padding-top: 2rem;
 }
@@ -969,7 +943,7 @@ Posts
   align-items: start;
   gap: 5rem;
   width: 90%;
-  max-width: 1100px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 2rem 0;
 }
@@ -1033,12 +1007,6 @@ Posts
   box-shadow: 3px 3px 10px -1px rgb(170, 170, 170);
   transition: transform 200ms linear;
 }
-
-/* @media (hover) {
-  .post-container__post:hover {
-    transform: scale(1.01);
-  }
-} */
 
 .post-container__post-image-container {
   position: relative;
@@ -1189,7 +1157,7 @@ Posts
 /* Post List Side-bar Post Topics */
 .post-list-side-bar-topics {
   display: none;
-  max-width: 300px;
+  max-width: 350px;
 }
 
 .post-list-side-bar-topics__header {
@@ -1850,6 +1818,56 @@ My Posts
   }
 }
 
+/* 
+===========
+My Comments
+=========== */
+.my-comments-container {
+  min-height: 100vh;
+  width: 90%;
+  max-width: 1000px;
+  margin: 0 auto;
+
+  display: grid;
+  gap: 1rem;
+  align-content: start;
+  padding: 2rem 0;
+}
+
+.my-comments-container__my-comment {
+  display: grid;
+  gap: 1rem;
+  background: white;
+  padding: 1.3rem;
+}
+
+.my-comments__date-posted {
+  color: rgb(100, 100, 100);
+}
+.my-comments__content {
+  letter-spacing: 0.07rem;
+  color: rgb(61, 61, 61);
+  line-height: 1.6;
+}
+
+.my-comments-container__buttons {
+  display: flex;
+  gap: 0.5rem
+}
+.my-comments__update-button,
+.my-comments__delete-button {
+  padding: 0.5rem 1rem;
+  letter-spacing: 0.05rem;
+  font-size: 1rem;
+  border-radius: 5px;
+  color: white;
+  border: none;
+  background: rgb(255, 83, 21)
+}
+
+.my-comments__delete-button {
+  background: rgb(80, 80, 80)
+}
 /* 
 ===========
 Create Post
