--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -6,6 +6,30 @@
   box-sizing: border-box;
 }
 
+:root {
+  /* Black */
+  --black-15: hsl(0, 0%, 15%);
+  --black-30: hsl(0, 0%, 30%);
+  --black-40: hsl(0, 0%, 40%);
+  --black-50: hsl(0, 0%, 50%);
+  --black-60: hsl(0, 0%, 60%);
+  --black-70: hsl(0, 0%, 70%);
+  --black-80: hsl(0, 0%, 80%);
+  --black-90: hsl(0, 0%, 90%);
+  --black-95: hsl(0, 0%, 95%);
+
+  /* Button Background */
+  --orange-57: hsl(7, 100%, 57%);
+  --purple-25: hsl(300, 100%, 25%);
+  --black-100: rgb(100, 100, 100);
+
+  /* Error text */
+  --red-45: hsl(9, 100%, 45%);
+}
+
+
+
+
 html {
   scroll-behavior: smooth;
 }
@@ -39,7 +63,7 @@ body {
 }
 
 main {
-  background: rgb(241, 241, 241);
+  background: var(--black-95);
 }
 
 /* loading */
@@ -598,6 +622,16 @@ Topics
   background-size: cover;
 }
 
+.topics-error-message {
+  color: var(--red-45);
+  letter-spacing: 0.07rem;
+  font-weight: 500;
+  width: 90%;
+  max-width:1200px;
+  margin: 0 auto;
+  padding-top: 2rem;
+}
+
 .topics-main-container {
   display: flex;
   align-items: start;
@@ -606,6 +640,7 @@ Topics
   max-width: 1200px;
   margin: 0 auto;
   padding: 3rem 0;
+  padding-top: 2rem;
 }
 
 .topics-container {
@@ -623,19 +658,21 @@ Topics
 .topics-main-container__header {
   line-height: 1;
   text-wrap: balance;
-  font-size: 2rem;
+  font-size: 1.8rem;
   letter-spacing: 0.02rem;
-  color: rgb(94, 0, 94);
+  color: var(--black-15);
   font-weight: 600;
   padding-bottom: 0.3rem;
+  text-wrap: balance;
 }
 
 .topics-sub-header {
   font-weight: 500;
   line-height: 1.2;
-  color: rgb(68, 68, 68);
-  letter-spacing: 0.04rem;
+  color: var(--black-30);
+  letter-spacing: 0.05rem;
   font-size: 1.1rem;
+  text-wrap: pretty;
 }
 
 .topic {
@@ -644,7 +681,7 @@ Topics
   gap: 1rem;
   padding: 1rem;
   border-radius: 8px;
-  background: rgb(255, 255, 255);
+  background: hsl(0, 0%, 100%);
 }
 
 .topic-image {
@@ -663,11 +700,11 @@ Topics
 .topic-title-container {
   display: grid;
   align-content: start;
-  gap: 0.5rem;
+  gap: 0.3rem;
 }
 
 .topic-name {
-  color: rgb(44, 44, 44);
+  color: var(--black-15);
   line-height: 1.4;
   letter-spacing: 0.04rem;
   font-size: 1.25rem;
@@ -678,13 +715,17 @@ Topics
   display: flex;
   align-items: center;
   gap: 0.3rem;
-  color: rgb(160, 160, 160);
+  color: var(--black-60);
   font-size: 0.9rem;
   font-weight: 500;
 }
 
-.topic-total-post-count{
-  padding-bottom: 0.2rem;
+.topic__num-of-post {
+  color: var(--black-70);
+}
+
+.topic-total-post-count {
+  padding-bottom: 0.1rem;
 }
 
 .topic-total-post-count-text {
@@ -693,33 +734,51 @@ Topics
 
 .topic-description {
   letter-spacing: 0.07rem;
-  color: rgb(65, 65, 65);
+  color: var(--black-30);
+  line-height: 1.5;
+  text-wrap: pretty;
+}
+
+.topic_buttons {
+  align-self: end;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .topic-see-all-post-btn {
-  align-self: end;
-  background: rgb(255, 83, 21);
-  color: white;
+  background: var(--orange-57);
+  color: hsl(0, 0%, 100%);
   font-weight: 500;
   text-align: center;
-  letter-spacing: 0.05rem;
   border-radius: 5px;
   padding: 0.6rem 1rem;
+}
+
+.topic_no-post-to-see {
+  font-weight: 500;
+  text-align: center;
+  border-radius: 5px;
+  padding: 0.6rem 1rem;
+  font-size: 1rem;
+  color: hsl(0, 0%, 100%);
+  background: var(--black-100);
+  border: none;
 }
 
 /* Topics Side Bar Recent Posts */
 .topics-side-bar-recent-posts {
   display: none;
   max-width: 300px;
-  background: white;
+  background: hsl(0, 0%, 100%);
   border-radius: 8px;
   padding: 1.3rem;
 }
 
 .topics-side-bar__header {
   font-weight: 600;
-  color: rgb(40, 40, 40);
-  font-size: 1.45rem;
+  color: var(--black-15);
+  font-size: 1.3rem;
   letter-spacing: 0.03rem;
 }
 
@@ -727,33 +786,41 @@ Topics
   position: relative;
 }
 
+.topic-side-bar_image-container {
+  position: relative;
+}
+
+.topics-side-bar_image {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  display: block;
+}
+
+.topic-side-bar-image-background-overlay {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.200);
+}
+
 .topics-side-bar__post {
   display: grid;
   align-items: start;
   gap: 0.5rem;
-  background: rgb(245, 245, 245);
+  background: var(--black-95);
   padding: 1rem;
   border-radius: 8px;
 }
 
 @media (hover) {
   .topics-side-bar__post:hover {
-    outline: 2px solid rgb(201, 201, 201);
+    outline: 2px solid var(--black-80);
   }
-}
-
-.topics-side-bar__post-image-container {
-  position: relative;
-}
-
-.topics-side-bar__post-image-color-overlay {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  left: 0;;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.300);
 }
 
 .topics-side-bar__post-text-content {
@@ -770,7 +837,32 @@ Topics
   font-weight: 500;
   font-size: 0.9rem;
   font-size: 0.9rem;
-  color: rgb(61, 61, 61);
+  color: var(--black-30);
+}
+
+.topics-side-bar__date-posted {
+  color: var(--black-50);
+  font-size: 0.9rem;
+}
+
+.topics-side-bar__post-title {
+  color: var(--black-15);
+  line-height: 1.4;
+  letter-spacing: 0.04rem;
+  font-size: 1rem;
+  font-weight: 600;
+  text-wrap: balance;
+}
+
+.topics-side-bar__post-content {
+  letter-spacing: 0.05rem;
+  color: var(--black-30);
+  font-size: 0.9rem;
+  text-wrap: pretty;
+}
+
+.topics-side-bar__post-content > span {
+  color: var(--orange-57)
 }
 
 .topics-side-bar__date-and-like {
@@ -778,11 +870,6 @@ Topics
   align-items: center;
   gap: 0.8rem;
   margin-top: 0.5rem;
-}
-
-.topics-side-bar__date-posted {
-  color: rgb(109, 109, 109);
-  font-size: 0.9rem;
 }
 
 .topics-side-bar__post-like-container {
@@ -804,14 +891,14 @@ Topics
 }
 
 .topics-side-bar__post-like {
-  color: rgb(131, 131, 131);
+  color: var(--black-60);
   font-size: 1rem;
 }
 
 .topics-side-bar__like-count,
 .topics-side-bar__like-text {
   font-size: 0.9rem;
-  color: rgb(143, 143, 143);
+  color: var(--black-50);
 }
 
 .topics-side-bar__num-of-replies-container {
@@ -821,71 +908,19 @@ Topics
 }
 
 .topics-side-bar__num-of-post {
-  color: rgb(158, 158, 158);
-  font-size: 1rem;
+  color: var(--black-60);
+  font-size: 0.9rem;
 }
 
 .topics-side-bar__reply-count,
 .topics-side-bar__reply-text {
   font-size: 0.9rem;
-  color: rgb(143, 143, 143);
+  color: var(--black-50);
 }
 
 .topic-side-bar__num-of-post-container {
   display: flex;
   align-items: center;
-}
-
-.topics-side-bar__num-of-post {
-  color: rgb(158, 158, 158);
-  font-size: 0.9rem;
-}
-
-.topics-side-bar__post-title {
-  color: rgb(44, 44, 44);
-  line-height: 1.4;
-  letter-spacing: 0.04rem;
-  font-size: 1rem;
-  font-weight: 600;
-}
-
-.topics-side-bar__post-content {
-  letter-spacing: 0.05rem;
-  color: rgb(59, 59, 59);
-  font-size: 0.9rem;
-  text-wrap: pretty;
-}
-
-.topics-side-bar__post-content > span {
-  color: rgb(255, 30, 0)
-}
-
-.topics-side-bar__post-topic {
-  position: absolute;
-  z-index: 2;
-  top: 16px;
-  right: 16px;
-  color: rgb(156, 0, 156);
-  font-size: 0.8rem;
-  font-weight: 600;
-  border-bottom: 2px solid transparent;
-
-  display: flex;
-  gap: 0.3rem;
-  align-items: center;
-  letter-spacing: 0.05rem;
-  transition: border-bottom 200ms linear;
-}
-
-.topics-side-bar__post-topic > i {
-  font-size: 0.8rem;
-  margin-top: 0.1rem
-}
-
-@media (hover) {
-  .topics-side-bar__post-topic:hover {
-    border-bottom: 2px solid rgb(182, 0, 182);
-  }
 }
 
 @media screen and (min-width: 600px) {
@@ -898,8 +933,13 @@ Topics
     width: 200px;
   }
 
-  .topic-see-all-post-btn {
-    justify-self: start;
+  .topic_buttons {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .topic-see-all-post-btn,
+  .topic_no-post-to-see {
     padding: 0.4rem 1rem;
   }
 }
@@ -919,45 +959,17 @@ Topics
 =====
 Posts
 ===== */
-.post-container__back-to-posts {
+
+.post-list-message {
+  color: hsl(128, 100%, 30%);
+  letter-spacing: 0.07rem;
+  font-weight: 500;
   width: 90%;
   max-width:1200px;
   margin: 0 auto;
-  display: flex;
-  align-items: center;
-  gap: 0.3rem;
   padding-top: 2rem;
 }
 
-.post-container__back-to-posts > a {
-  font-size: 1.1rem;
-  font-weight: 600;
-  color: rgb(226, 80, 26);
-  border-bottom: 3px solid orangered;
-  padding-bottom: 0.3rem;
-  line-height: 1;
-  text-transform: capitalize;
-}
-
-.post-list-error-message {
-  color: rgb(223, 33, 0);
-  letter-spacing: 0.07rem;
-  font-weight: 500;
-  width: 90%;
-  max-width:1400px;
-  margin: 0 auto;
-  padding-top: 2rem;
-}
-
-.post-list-message {
-  color: rgb(0, 151, 20);
-  letter-spacing: 0.07rem;
-  font-weight: 500;
-  width: 90%;
-  max-width:1400px;
-  margin: 0 auto;
-  padding-top: 2rem;
-}
 .post-list-main-container {
   display: flex;
   align-items: start;
@@ -973,6 +985,17 @@ Posts
   gap: 2rem;
 }
 
+.post-list__header {
+  line-height: 1;
+  text-wrap: balance;
+  font-size: 1.8rem;
+  letter-spacing: 0.02rem;
+  color: var(--black-15);
+  font-weight: 600;
+  padding-bottom: 0.3rem;
+  text-wrap: balance;
+}
+
 .post-container__post-list-create-post {
   display: flex;
   align-items: center;
@@ -980,7 +1003,7 @@ Posts
   gap: 1rem;
   padding: 1rem;
   border-radius: 8px;
-  background: rgb(255, 255, 255);
+  background: hsl(0, 0%, 100%);
 }
 
 .post-container__create-post-image-container {
@@ -1002,15 +1025,15 @@ Posts
   font-size: 0.9rem;
   letter-spacing: 0.05rem;
   border-radius: 25px;
-  color: rgb(100, 100, 100);
-  border: 1px solid rgb(201, 201, 201);
+  color: var(--black-40);
+  border: 1px solid var(--black-80);
   cursor: pointer;
   transition: background 200ms linear;
 }
 
 @media (hover) {
   .post-container__create-post-text:hover {
-    background: rgb(230, 230, 230);
+    background: var(--black-90);
   }
 }
 
@@ -1026,7 +1049,7 @@ Posts
   gap: 0.8rem;
   padding: 1rem;
   border-radius: 8px;
-  background: rgb(255, 255, 255);
+  background: hsl(0, 0%, 100%);
 }
 
 .post-container__post-image-container {
@@ -1064,11 +1087,11 @@ Posts
 .post-container__post-author {
   font-weight: 500;
   font-size: 0.9rem;
-  color: rgb(75, 75, 75);
+  color: var(--black-30);
 }
 
 .post-container__date-posted {
-  color: rgb(109, 109, 109);
+  color: var(--black-50);
   font-size: 0.9rem;
 }
 
@@ -1095,7 +1118,7 @@ Posts
 }
 
 .post-like {
-  color: rgb(131, 131, 131);
+  color: var(--black-60);
   font-size: 1rem;
   transition: 300ms color linear;
 }
@@ -1104,7 +1127,7 @@ Posts
 .post-like-text {
   font-size: 0.9rem;
   padding-top: 0.2rem;
-  color: rgb(143, 143, 143);
+  color: var(--black-70);
 }
 
 .post-container__num-of-replies-container {
@@ -1114,18 +1137,18 @@ Posts
 }
 
 .post-container__num-of-post {
-  color: rgb(158, 158, 158);
+  color: var(--black-60);
   font-size: 1rem;
 }
 
 .post-reply-count,
 .post-reply-text {
   font-size: 0.9rem;
-  color: rgb(143, 143, 143);
+  color: var(--black-70);
 }
 
 .post-container__post-title {
-  color: rgb(44, 44, 44);
+  color: var(--black-15);
   line-height: 1.4;
   letter-spacing: 0.04rem;
   font-size: 1.25rem;
@@ -1134,14 +1157,14 @@ Posts
 
 .post-container__post-content {
   letter-spacing: 0.07rem;
-  color: rgb(59, 59, 59);
+  color: var(--black-30);
 }
 
 .post-container__post-read-more-btn {
   align-self: end;
   padding: 0.6rem 1rem;
-  background: orangered;
-  color: white;
+  background: var(--orange-57);
+  color: hsl(0, 0%, 100%);
   text-align: center;
   border-radius: 5px;
   font-size: 1rem;
@@ -1149,29 +1172,6 @@ Posts
   font-weight: 500;
   border: none;
   cursor: pointer;
-}
-
-.post-container__post-topic {
-  position: absolute;
-  z-index: 2;
-  top: 16px;
-  right: 16px;
-  background: rgb(148, 0, 148);
-  padding: 0.3rem 0.5rem;
-  color: white;
-  border-radius: 5px;
-  font-size: 0.9rem;
-  font-weight: 500;
-
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
-  letter-spacing: 0.05rem;
-}
-
-.post-container__post-topic > i {
-  font-size: 0.8rem;
-  margin-top: 0.1rem
 }
 
 /* Post List Side-bar Post Topics */
@@ -1187,7 +1187,7 @@ Posts
 .post-list-side-bar-topics__header {
   font-weight: 600;
   color: rgb(30, 30, 30);
-  font-size: 1.45rem;
+  font-size: 1.3rem;
   letter-spacing: 0.03rem;
 }
 
@@ -1205,19 +1205,6 @@ Posts
     outline: 2px solid rgb(201, 201, 201);
   }
 }
-
-/* .post-list-side-bar-topics__topic-image {
-  width: 100%;
-  aspect-ratio: 1/1;
-  object-fit: cover;
-  display: block;
-} */
-
-/* .post-list-side-bar-topics__text-container {
-  display: grid;
-  align-content: start;
-  gap: 1rem;
-} */
 
 .post-list-side-bar-topics__topic-title-container {
   display: flex;
@@ -1354,7 +1341,7 @@ Post Detail
   display: grid;
   align-content: start;
   gap: 2rem;
-  padding: 3rem 0;
+  padding: 2rem 0;
 }
 
 .post-detail-container__back-to-posts {
@@ -1525,29 +1512,6 @@ Post Detail
   font-size: 0.9rem;
 }
 
-.post-detail-container__post-topic {
-  position: absolute;
-  z-index: 2;
-  top: 16px;
-  right: 16px;
-  background: rgb(148, 0, 148);
-  padding: 0.3rem 0.5rem;
-  color: white;
-  border-radius: 5px;
-  font-size: 0.9rem;
-  font-weight: 500;
-
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
-  letter-spacing: 0.05rem;
-}
-
-.post-detail-container__post-topic > i {
-  font-size: 0.8rem;
-  margin-top: 0.1rem
-}
-
 .reply-form-container {
   display: grid;
   padding: 1.5rem;
@@ -1649,6 +1613,20 @@ Post Detail
   line-height: 1.6;
   letter-spacing: 0.07rem;
   color: rgb(70, 70, 70);
+}
+
+.no-replied-post-container {
+  display: grid;
+  gap: 1rem;
+}
+
+.no-replied-post-container > h4 {
+  color: var(--black-30);
+  font-weight: 600;
+  text-align: center;
+  line-height: 1;
+  font-size: 1.1rem;
+  letter-spacing: 0.05rem;
 }
 
 @media screen and (min-width: 700px) {
@@ -1988,14 +1966,35 @@ Create Post
 ===========
  */
  .create-post-container {
-  padding: 5rem 0;
+  padding: 2rem 0;
  }
+
+ .create-post-container__redirect-btn {
+  padding: 2rem 0;
+  padding-top: 0;
+  width: 90%;
+  max-width: 550px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.create-post-container__redirect-btn > i {
+  color: var(--black-30);
+  font-size: 1rem;
+}
+
+.create-post-container__redirect-btn > a {
+  color: var(--black-30);
+  font-size: 1rem;
+}
 
  .create-post__header {
   letter-spacing: 0.05rem;
   color: rgb(39, 39, 39);
   font-weight: 600;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 .create-post__form-container {
@@ -2049,7 +2048,7 @@ Create Post
 
 .create-post__select {
   width: 100%;
-  padding: 0.9rem 1rem;
+  padding: 0.7rem 1rem;
   border-radius: 5px;
   background: none;
   font-size: 0.95rem;
@@ -2064,7 +2063,7 @@ Create Post
 
 .create-post__input,
 .create-post__textarea {
-  padding: 0.9rem 1rem;
+  padding: 0.7rem 1rem;
   border: 1px solid lightgray;
   letter-spacing: 0.05rem;
   border-radius: 5px;
@@ -2106,6 +2105,27 @@ Create Post
 ===========
 TOPIC POSTS
 =========== */
+.topic-posts-container__redirect-btn {
+  padding: 2rem 0;
+  padding-bottom: 0;
+  width: 90%;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.topic-posts-container__redirect-btn > i {
+  color: var(--black-30);
+  font-size: 1rem;
+}
+
+.topic-posts-container__redirect-btn > a {
+  color: var(--black-30);
+  font-size: 1rem;
+}
+
 .topic-posts-container {
   padding: 2rem 0;
   min-height: 100vh;
@@ -2116,35 +2136,38 @@ TOPIC POSTS
   max-width: 1000px;
   margin: 0 auto;
   display: flex;
-  align-items: start;
+  align-items: center;
+  justify-content: end;
 }
 
 .topic-posts-navbar__toggle-btns-container {
-  margin-left: auto;
   position: relative;
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .topic-posts-navbar__nav-bar-text {
   letter-spacing: 0.05rem;
-  color: rgb(26, 25, 25);
-}
-
-.topic-change-input {
-  padding: 0.5rem 1rem;
-  width: 200px;
-  border: 1px solid lightgray;
-  border-radius: 5px;
-  letter-spacing: 0.07rem;
+  color: var(--black-40);
   font-size: 1rem;
-  color: rgb(49, 49, 49);
 }
 
 .topic-posts-navbar__toggle-btns {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  /* gap: 3rem; */
+  width: 200px;
+  padding: 0.4rem 0.5rem;
+  border: 1px solid var(--black-80);
+  border-radius: 5px;
+}
+
+.topic-change-input {
+  letter-spacing: 0.05rem;
+  font-size: 1rem;
+  color: var(--black-15);
 }
 
 .topic-post-toggle-btn {
@@ -2152,18 +2175,20 @@ TOPIC POSTS
   border: none;
   font-size: 1rem;
   cursor: pointer;
+  color: var(--black-40)
 }
 
 .topic-posts-navbar__topics-btns {
   position: absolute;
   z-index: 3;
-  top: 50px;
-  width: 100%;
+  top: 45px;
+  right: 0;
+  width: 200px;
   display: grid;
   padding: 0.8rem 0;
   border-radius: 8px;
   background: white;
-  box-shadow: 3px 3px 6px -1px rgb(197, 197, 197);
+  box-shadow: 3px 3px 10px -1px rgb(182, 182, 182);
 }
 
 .topic-btn {
