--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -100,32 +100,19 @@ main {
 /* 
 ============
 Landing Page
-============
-*/
-.landing-page-header {
-  min-height: 100vh;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.911), rgba(0, 0, 0, 0.2)),
-              url('./images/landing_page.webp');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: right;
-}
-
+============ */
 .landing-page-navbar-container {
-  position: relative;
   width: 90%;
-  height: 100vh;
-  max-width: 1100px;
   margin: 0 auto;
+  max-width: 1200px;
 }
-
 
 .landing-page-navbar-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 
 .landing-page-navbar-brand-link {
@@ -149,7 +136,7 @@ Landing Page
 }
 
 .landing-page-navbar-brand-verticla-line {
-  border: 1px solid rgb(68, 68, 68);
+  border: 1px solid var(--black-80);
   height: 35px;
 }
 
@@ -164,14 +151,14 @@ Landing Page
 .landing-page-navbar-brand-name-lg-text {
   font-size: 1.5rem;
   font-weight: 600;
-  color: rgb(250, 250, 250)
+  color: var(--black-15)
 }
 
 .landing-page-navbar-brand-name-sm-text {
   font-size: 0.9rem;
   letter-spacing: 0.09rem;
   text-transform: uppercase;
-  color: rgb(184, 183, 183);
+  color: var(--black-50);
   font-weight: 500;
 }
 
@@ -185,108 +172,407 @@ Landing Page
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: var(--black-30);
   background: none;
   border: none;
-  font-size: 1.4rem;
+  font-size: 1.8rem;
 }
 
 .landing-page-navlinks {
   position: absolute;
   z-index: 3;
-  top: 80px;
+  top: 0;
   right: -300px;
   white-space: nowrap;
   overflow: hidden;
   max-width: 0;
-  height: calc(100vh - 90px);
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  background: rgba(255, 255, 255, 0.200);
-  backdrop-filter: blur(15px);
-  border-radius: 8px;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+  height: 100vh;
+  
+  display: grid;
+  align-content: start;
+  gap: 1.5rem;
+  padding: 2rem 0;
+  background: hsl(0, 0%, 100%);
   transition: max-width 300ms linear, right 300ms linear;
 }
 
 .show-landing-page-nav-links {
   right: 0;
   width: 100%;
-  max-width: 300px;
+  max-width: 250px;
+}
+
+.landing-page-hide-navlink-btn {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding: 0 1.8rem;
+  margin-bottom: 2rem;
 }
 
 .landing-page-navlink {
-  color: rgb(231, 231, 231);
+  color: var(--black-30);
   font-weight: 500;
   letter-spacing: 0.05rem;
-  font-size: 0.95rem;
-  padding: 0.7rem 2rem;
+  font-size: 1rem;
+  padding: 0 2rem;
   border-bottom: 2px solid transparent;
   transition: color 500ms linear, border-bottom 500ms linear;
 }
 
-.landing-page-navlink:first-child {
-  padding-top: 1.5rem;
+/* Hero section */
+
+.landing-page-hero-wrapper {
+  background: #e7dad2;
+  padding: 4rem 0;
 }
 
-.landing-page-navlink:last-child {
-  padding-bottom: 1.5rem;
+.landing-page-hero-container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+
+  display: grid;
+  align-items: center;
+  gap: 2rem;
 }
 
-.landing-page-hero-text-container {
-  position: absolute;
-  z-index: 2;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.landing-page-hero-img > img {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  display: block;
+  object-position: right;
 }
 
 .landing-page-hero-text-wrapper {
   display: grid;
-  gap: 1.5rem;
-  max-width: 300px;
+  align-content: start;
+  gap: 2rem;
+  text-align: center;
+  max-width: 449px;
+  margin: 0 auto;
 }
 
 .landing-page-hero-header {
-  color: rgb(255, 253, 253);
-  text-wrap: balance;
+  color:#0a0a0a;
+  text-wrap: pretty;
+  line-height: 1.2;
+  font-size: clamp(2rem, 5vw + 1rem, 3.5rem);
 }
 
 .landing-page-hero-paragraph {
-  color: rgb(190, 190, 190);
-  letter-spacing: 0.07rem;
-  text-wrap: balance;
-  font-weight: 500;
-  font-size: 1.1rem;
+  color: #363636;
+  letter-spacing: 0.05rem;
+  line-height: 1.5;
+  text-wrap: pretty;
+  font-size: clamp(1.05rem, 1vw + 0.5rem, 1.1rem);
 }
 
 .landing-page-join-btn {
-  padding: 0.6rem 2rem ;
+  padding: 0.7rem 2rem ;
   text-align: center;
-  background: rgb(228, 87, 36);
-  color: white;
-  justify-self: start;
+  background: #F01C00;
+  color: hsl(0, 0%, 100%);
   border-radius: 5px;
   letter-spacing: 0.05rem;
 }
 
 .landing-page-already-registered {
   letter-spacing: 0.05rem;
-  color: rgb(182, 182, 182);
+  color: #1A1A1A;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  font-size: 1rem;
+}
+
+.landing-page-already-registered > a {
+  color: #F01C00;
+  text-decoration: underline;
+  font-weight: 500;
+}
+
+/* Main section */
+.landing-page-main {
+  background: white;
+}
+
+.landing-page-topics-container {
+  padding: 3rem 0;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  gap: 3rem;
+}
+
+.landing-page-topic-header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  text-align: center;
+}
+
+.landing-page-topic-header {
+  text-wrap: pretty;
+  color: var(--black-15);
+  line-height: 1;
+  font-size: clamp(2rem, 5vw + 1rem, 2.6rem);
+}
+
+.landing-page-topic-see-all-forums {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  font-size: 1.1rem;
-}
-.landing-page-already-registered > a {
-  color: rgb(255, 255, 255);
-  text-decoration: underline;
+  color: white;
+  padding: 0.4rem 0.8rem;
+  border-radius: 5px;
+  background: var(--orange-57)
 }
 
-@media screen and (min-width: 650px) {
+.landing-page-topics {
+  display: grid;
+  gap: 3rem;
+}
+
+.landing-page-topic {
+  display: grid;
+  align-content: stretch;
+  gap: 1rem;
+}
+
+.landing-page-topic-image {
+  width: 100%;
+  aspect-ratio: 4/3;
+  object-fit: cover;
+  display: block;
+}
+
+.landing-page-topic-text-container {
+  display: grid;
+  align-content: stretch;
+  gap: 1rem;
+}
+
+.landing-page-topic-name {
+  color: var(--black-15);
+  line-height: 1.4;
+  letter-spacing: 0.04rem;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.landing-page-topic-description {
+  letter-spacing: 0.07rem;
+  color: var(--black-30);
+  line-height: 1.5;
+  text-wrap: pretty;
+}
+
+.landing-page-topic-post-count {
+  display: flex;
+  align-items: start;
+  gap: 0.3rem;
+  color: var(--black-60);
+}
+
+.landing-page-topic-num-of-post {
+  color: var(--black-70);
+  font-size: 1.2rem;
+}
+
+.landing-page-topic-total-post-count {
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+}
+
+/* end */
+
+/* Landing page posts */
+.landing-page-posts-container {
+  background: #f8f2ef;
+  padding: 3rem 0;
+}
+
+.landing-page-posts-wrapper {
+  width: 90%;
+  max-width: 600px;
+  margin: 0 auto;
+  display: grid;
+  gap: 3rem;
+}
+
+.landing-page-posts-header {
+  text-wrap: pretty;
+  color: var(--black-15);
+  text-align: center;
+  font-size: clamp(2rem, 5vw + 1rem, 2.6rem);
+}
+
+.landing-page-posts {
+  display: grid;
+  align-content: start;
+  gap: 2rem;
+}
+
+.landing-page-post {
+  display: grid;
+  align-items: center;
+  gap: 1rem;
+  padding-bottom: 2rem;
+  border-bottom: 2px solid var(--black-80);
+}
+
+.landing-page-post-image{
+  width: 100%;
+  height: 100;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  display: block;
+}
+
+.landing-page-post-text-content {
+  display: grid;
+  align-items: start;
+  gap: 1rem;
+}
+
+.landing-page-post-author-and-date {
+  display: grid;
+  gap: 0.2rem
+}
+
+.landing-page-post-author {
+  font-weight: 500;
+  font-size: 0.9rem;
+  color: var(--black-30);
+}
+
+.landing-page-post-date-posted {
+  color: var(--black-50);
+  font-size: 0.9rem;
+}
+
+.landing-page-post-title {
+  color: var(--black-15);
+  line-height: 1.3;
+  font-size: clamp(1.3rem, 3vw + 1rem , 1.8rem);
+  font-weight: 600;
+}
+
+.landing-page-post-content {
+  letter-spacing: 0.07rem;
+  color: var(--black-30);
+  line-height: 1.5;
+  text-wrap: pretty;
+}
+
+.landing-page-post-read-more {
+  color:#F01C00;
+  text-decoration:underline;
+  letter-spacing: 0.05rem;
+  margin-left: 0.3rem;
+}
+
+.landing-page-post-date-and-like {
+  display: flex;
+  align-items: center;
+}
+
+.landing-page-post-like {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  letter-spacing: 0.05rem;
+  background: none;
+  border: none;
+}
+
+.landing-page-post-like-container {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+}
+
+.landing-page-post-like {
+  color: var(--black-60);
+  font-size: 1rem;
+  transition: 300ms color linear;
+}
+
+.landing-page-post-like-count,
+.landing-page-post-like-text {
+  font-size: 0.9rem;
+  padding-top: 0.2rem;
+  color: var(--black-70);
+}
+
+.post-container__num-of-replies-container {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+}
+
+.post-container__num-of-post {
+  color: var(--black-60);
+  font-size: 1rem;
+}
+
+.landing-page-post-reply-count,
+.landing-page-post-reply-text {
+  font-size: 0.9rem;
+  color: var(--black-70);
+}
+
+.landing-page-post-see-all-posts-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.landing-page-post-see-all-posts {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  color: white;
+  padding: 0.4rem 0.8rem;
+  border-radius: 5px;
+  background: var(--orange-57)
+}
+
+/* end */
+
+.bg-overlay {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.700);
+}
+
+.hide-bg-overlay {
+  display: none;
+}
+
+@media screen and (min-width: 500px) {
+
   .landing-page-navlinks-toggle-btns {
+    display: none;
+  }
+
+  .landing-page-hide-navlink-btn {
     display: none;
   }
 
@@ -311,33 +597,81 @@ Landing Page
     padding: 0;
   }
 
-  @media (hover) {
-    .landing-page-navlink:hover {
-      color: rgb(255, 255, 255);
-      border-bottom: 2px solid rgb(255, 255, 255);
-    }
-  }
-
-  .landing-page-navlink:first-child {
-    padding-top: 0;
-  }
-  
-  .landing-page-navlink:last-child {
-    padding-bottom: 0;
+  .landing-page-login-btn {
+    border: 1px solid red;
+    padding: 0.3rem 1.5rem;
+    border-radius: 5px;
+    background: var(--orange-57);
+    color: white;
   }
 }
 
-@media screen and (min-width: 700px) {
-  .landing-page-hero-text-container {
-    max-width: 700px;
+@media screen and (min-width: 676px) {
+
+  .landing-page-topics-container {
+    padding: 4rem 0;
+  }
+
+  .landing-page-topics {
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  }
+
+  .landing-page-posts-container {
+    padding: 4rem 0;
+  }
+
+  .landing-page-posts-wrapper {
+    gap: 4rem;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .landing-page-hero-container {
+    align-items: center;
+    grid-template-columns: calc(42% - 40px) calc(58% - 40px);
+    gap: 5rem;
+  }
+
+  .landing-page-hero-img {
+    order: 2
   }
 
   .landing-page-hero-text-wrapper {
-    max-width: 400px;
+    text-align: start;
+    max-width: initial;
+    margin: 0;
   }
 
   .landing-page-hero-header {
-    font-size: 2.5rem;
+    font-size: clamp(2rem, 5vw + 1rem, 2.95rem);
+  }
+
+  .landing-page-join-btn {
+    justify-self: start;
+    padding: 0.7rem 2rem;
+  }
+
+  .landing-page-already-registered {
+    justify-content: start;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+
+  .landing-page-hero-header {
+    font-size: clamp(2rem, 5vw + 1rem, 3.7rem);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+
+  .landing-page-hero-img > img {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 4/3;
+    object-fit: cover;
+    display: block;
+    object-position: right;
   }
 }
 
@@ -2572,8 +2906,14 @@ USER LOGIN
 }
 
 
-
-
+/* 
+======
+FOOTER
+====== */
+.footer-container {
+  height: 50vh;
+  background: #886854
+}
 
 
 
