--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -127,7 +127,7 @@ Landing Page
   object-fit: cover;
   border-radius: 50%;
   display: block;
-  background: rgb(104, 0, 104);
+  background: hsl(0, 0%, 20%);
   padding: 0.3rem
 }
 
@@ -224,7 +224,7 @@ Landing Page
 /* Hero section */
 
 .landing-page-hero-wrapper {
-  background: #e7dad2;
+  background: #fff1e8;
   padding: 4rem 0;
 }
 
@@ -241,10 +241,11 @@ Landing Page
 .landing-page-hero-img > img {
   width: 100%;
   height: 100%;
-  aspect-ratio: 1/1;
+  aspect-ratio: 4/3;
   object-fit: cover;
   display: block;
   object-position: right;
+  border-radius: 8px;
 }
 
 .landing-page-hero-text-wrapper {
@@ -252,7 +253,7 @@ Landing Page
   align-content: start;
   gap: 2rem;
   text-align: center;
-  max-width: 449px;
+  max-width: 450px;
   margin: 0 auto;
 }
 
@@ -260,7 +261,7 @@ Landing Page
   color:#0a0a0a;
   text-wrap: pretty;
   line-height: 1.2;
-  font-size: clamp(2rem, 5vw + 1rem, 3.5rem);
+  font-size: clamp(2rem, 5vw + 1rem, 3.8rem);
 }
 
 .landing-page-hero-paragraph {
@@ -268,33 +269,17 @@ Landing Page
   letter-spacing: 0.05rem;
   line-height: 1.5;
   text-wrap: pretty;
-  font-size: clamp(1.05rem, 1vw + 0.5rem, 1.1rem);
+  font-size: clamp(1.05rem, 1vw + 0.5rem, 1.2rem);
 }
 
 .landing-page-join-btn {
-  padding: 0.7rem 2rem ;
+  padding: 0.8rem 2rem ;
   text-align: center;
-  background: #E73E27;
+  background: hsl(7, 100%, 54%);
   color: hsl(0, 0%, 100%);
   border-radius: 5px;
   letter-spacing: 0.05rem;
-}
-
-.landing-page-already-registered {
-  letter-spacing: 0.05rem;
-  color: #1A1A1A;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-  font-size: 1rem;
-}
-
-.landing-page-already-registered > a {
-  color: #E73E27;
-  text-decoration: underline;
-  font-weight: 500;
+  margin-top: 1rem;
 }
 
 /* Main section */
@@ -332,10 +317,10 @@ Landing Page
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  color: white;
-  padding: 0.4rem 0.8rem;
+  color: #ff452d;
+  padding: 0.4rem 1rem;
   border-radius: 5px;
-  background: #E73E27
+  outline: 2px solid #ff452d;
 }
 
 .landing-page-topics {
@@ -355,6 +340,7 @@ Landing Page
   aspect-ratio: 4/3;
   object-fit: cover;
   display: block;
+  border-radius: 8px;
 }
 
 .landing-page-topic-text-container {
@@ -376,6 +362,13 @@ Landing Page
   color: var(--black-30);
   line-height: 1.5;
   text-wrap: pretty;
+}
+
+.landing-page-topic-read-more {
+  color:#ff3d24;
+  text-decoration:underline;
+  letter-spacing: 0.05rem;
+  margin-left: 0.3rem;
 }
 
 .landing-page-topic-post-count {
@@ -402,7 +395,7 @@ Landing Page
 
 /* Landing page posts */
 .landing-page-posts-container {
-  background: #f8f2ef;
+  background: #fff1e8;
   padding: 3rem 0;
 }
 
@@ -436,10 +429,10 @@ Landing Page
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  color: white;
-  padding: 0.4rem 0.8rem;
+  color: #ff381e;
+  padding: 0.4rem 1rem;
   border-radius: 5px;
-  background: #E73E27
+  outline: 2px solid #ff381e;
 }
 
 .landing-page-posts {
@@ -453,14 +446,20 @@ Landing Page
   display: grid;
   align-items: center;
   gap: 1rem;
+  border-radius: 8px;
+}
+
+.landing-page-post-image-container {
+  border-radius: 8px;
 }
 
 .landing-page-post-image{
   width: 100%;
   height: 100;
-  aspect-ratio: 1/1;
+  aspect-ratio: 4/3;
   object-fit: cover;
   display: block;
+  border-radius: 8px;
 }
 .landing-page-post-color-overlay {
   position: absolute;
@@ -473,7 +472,8 @@ Landing Page
    rgb(0, 0, 0), 
    rgba(0, 0, 0, 0.55),
    rgba(0, 0, 0, 0)
-   )
+   );
+   border-radius: 8px;
 }
 
 .landing-page-post-text-content {
@@ -486,23 +486,8 @@ Landing Page
   display: grid;
   align-content: end;
   gap: 1rem;
-  padding: 1rem;
-}
-
-.landing-page-post-author-and-date {
-  display: grid;
-  gap: 0rem
-}
-
-.landing-page-post-author {
-  font-weight: 500;
-  font-size: 0.95rem;
-  color: var(--black-90);
-}
-
-.landing-page-post-date-posted {
-  color: var(--black-90);
-  font-size: 0.95rem;
+  padding: 1.5rem;
+  border-radius: 8px;
 }
 
 .landing-page-post-title {
@@ -520,7 +505,7 @@ Landing Page
 }
 
 .landing-page-post-read-more {
-  color:#ff7676;
+  color:#ff7b6a;
   text-decoration:underline;
   letter-spacing: 0.05rem;
   margin-left: 0.3rem;
@@ -579,7 +564,7 @@ Landing Page
   display: none;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 600px) {
 
   .landing-page-navlinks-toggle-btns {
     display: none;
@@ -611,8 +596,8 @@ Landing Page
   }
 
   .landing-page-login-btn {
-    border: 1px solid #E73E27;
-    padding: 0.3rem 1.5rem;
+    border: 1px solid hsl(7, 100%, 54%);
+    padding: 0.4rem 2rem;
     border-radius: 5px;
     background: var(--orange-57);
     color: white;
@@ -662,12 +647,12 @@ Landing Page
   }
 
   .landing-page-hero-header {
-    font-size: clamp(2rem, 5vw + 1rem, 2.95rem);
+    font-size: clamp(2rem, 5vw + 1rem, 2.3rem);
   }
 
   .landing-page-join-btn {
     justify-self: start;
-    padding: 0.7rem 2rem;
+    padding: 0.7rem 3rem;
   }
 
   .landing-page-already-registered {
@@ -678,7 +663,7 @@ Landing Page
 @media screen and (min-width: 1100px) {
 
   .landing-page-hero-header {
-    font-size: clamp(2rem, 5vw + 1rem, 3.7rem);
+    font-size: clamp(2rem, 5vw + 1rem, 3.1rem);
   }
 }
 
@@ -691,6 +676,10 @@ Landing Page
     object-fit: cover;
     display: block;
     object-position: right;
+  }
+
+  .landing-page-hero-header {
+    font-size: clamp(2rem, 5vw + 1rem, 3.4rem);
   }
 }
 
