--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -493,7 +493,7 @@ Landing Page
 .landing-page-post-title {
   color: hsl(0, 0%, 100%);
   line-height: 1.3;
-  font-size: clamp(1.3rem, 3vw + 1rem , 1.8rem);
+  font-size: clamp(1.3rem, 1vw + 1rem , 1.8rem);
   font-weight: 600;
 }
 
@@ -562,6 +562,13 @@ Landing Page
 
 .hide-bg-overlay {
   display: none;
+}
+
+@media screen and (min-width: 500px) {
+
+  .landing-page-post-title {
+    font-size: clamp(1.3rem, 3vw + 1rem , 1.8rem);
+  }
 }
 
 @media screen and (min-width: 600px) {
